--- a/resources/assets/sass/_custom.scss
+++ b/resources/assets/sass/_custom.scss
@@ -33,3 +33,17 @@
     }
   }
 }
+
+.navbar-custom {
+    background: #3093ce;
+}
+
+.paginate_button{
+  display: contents !important;
+}
+
+.footer-bottom {
+    background-color: #15224f;
+    min-height: 30px;
+    width: 100%;
+}
