--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -2,7 +2,9 @@
 @import 'Lumino/font-awesome.min';
 @import 'Lumino/datepicker3';
 @import 'Lumino/styles';
-@import url("https://cdn.datatables.net/1.10.16/css/jquery.dataTables.css");
-@import url("https://cdn.datatables.net/responsive/2.2.1/css/responsive.dataTables.min.css");
+@import 'Lumino/dataTables';
+@import 'Lumino/responsive.dataTables.min';
+// @import url("https://cdn.datatables.net/1.10.16/css/jquery.dataTables.css");
+// @import url("https://cdn.datatables.net/responsive/2.2.1/css/responsive.dataTables.min.css");
 @import url('https://fonts.googleapis.com/css?family=Roboto:300');
 @import 'custom';
