--- a/public/css/app.css
+++ b/public/css/app.css
@@ -12982,3 +12982,9 @@ p.back-link {
 .paginate_button {
   display: contents !important;
 }
+
+.footer-bottom {
+  background-color: #15224f;
+  min-height: 30px;
+  width: 100%;
+}
