--- a/public/css/app.css
+++ b/public/css/app.css
@@ -12983,8 +12983,16 @@ p.back-link {
   display: contents !important;
 }
 
-.footer-bottom {
-  background-color: #15224f;
-  min-height: 30px;
-  width: 100%;
+.navbar-footer {
+  font-size: 12pt;
+  color: white;
+  line-height: 31px;
+}
+
+.dataTables_paginate {
+  text-align: right;
+}
+
+.active a {
+  background-color: #5ac1de !important;
 }
