--- a/public/css/app.css
+++ b/public/css/app.css
@@ -12996,3 +12996,11 @@ p.back-link {
 .active a {
   background-color: #5ac1de !important;
 }
+
+.has-error {
+  border: 1px solid #f9243f !important;
+}
+
+.hidden {
+  display: none;
+}
