--- a/resources/assets/sass/_custom.scss
+++ b/resources/assets/sass/_custom.scss
@@ -57,3 +57,11 @@
     background-color: #5ac1de !important;
   }
 }
+
+.has-error{
+  border: 1px solid #f9243f !important;
+}
+
+.hidden{
+  display: none;
+}
